@@ -6,12 +6,14 @@ use Cwd ();
 use File::Path ();
 use File::Spec;
 use FindBin;
+use Log::Log4perl;
+use Test::Log4perl;
 use Test::More;
 
 BEGIN {
     plan skip_all => "set TEST_AUTHOR to run these tests"
         unless $ENV{TEST_AUTHOR};
-    plan tests => 5 + 4*9;
+    plan tests => 5 + 4*10;
 
     use_ok('SVN::Notify::Mirror::Rsync::AutoCheckout');
 }
@@ -25,14 +27,22 @@ diag("repo_dir = [$REPO_DIR], checkout_dir = [$CHECKOUT_DIR], rsync_dir = [$RSYN
 my $DEFAULT_RSYNC_HOSTNAME = qx{hostname -f};
 chomp $DEFAULT_RSYNC_HOSTNAME;
 my %NOTIFIER_ARGS = (
-    repos_path => $REPO_DIR,
-    to         => $CHECKOUT_DIR,
-    revision   => 15,
-    rsync_ssh  => 1,
-    rsync_host => $ENV{TEST_RSYNC_HOSTNAME} || $DEFAULT_RSYNC_HOSTNAME,
-    rsync_dest => $RSYNC_DIR,
-    rsync_args => { recursive => 1 },
+    repos_path  => $REPO_DIR,
+    to          => $CHECKOUT_DIR,
+    revision    => 15,
+    rsync_ssh   => 1,
+    rsync_host  => $ENV{TEST_RSYNC_HOSTNAME} || $DEFAULT_RSYNC_HOSTNAME,
+    rsync_dest  => $RSYNC_DIR,
+    rsync_args  => { recursive => 1 },
+    log_category => 'unit_svn_notify_mirror_rsync_autocheckout',
 );
+
+Log::Log4perl->init(\qq[
+    log4perl.category.$NOTIFIER_ARGS{log_category} = DEBUG, Screen
+    log4perl.appender.Screen = Log::Log4perl::Appender::Screen
+    log4perl.appender.Screen.layout = Log::Log4perl::Layout::PatternLayout
+    log4perl.appender.Screen.layout.ConversionPattern = %c %p %l %m%n
+]);
 
 # Fresh checkout
 File::Path::rmtree($SCRATCH_DIR) if -d $SCRATCH_DIR;
@@ -43,7 +53,8 @@ run_tests(
     $CHECKOUT_DIR,
     $RSYNC_DIR,
     [ 'test.txt' ],
-    {   
+    "file://$REPO_DIR/trunk/htdocs",
+    {
         %NOTIFIER_ARGS,
         repos_uri  => "file://$REPO_DIR/trunk/htdocs",
     },
@@ -57,7 +68,8 @@ run_tests(
     $CHECKOUT_DIR,
     $RSYNC_DIR,
     [ 'test2.txt' ],
-    {   
+    "file://$REPO_DIR/branches/test/htdocs",
+    {
         %NOTIFIER_ARGS,
         repos_uri  => "file://$REPO_DIR/branches/test/htdocs",
     },
@@ -73,6 +85,7 @@ run_tests(
     $CHECKOUT_DIR,
     $RSYNC_DIR,
     [ 'test.txt' ],
+    "file://$REPO_DIR/tags/200805291436/htdocs",
     {
         %NOTIFIER_ARGS,
         revision    => 9,
@@ -89,6 +102,7 @@ run_tests(
     $CHECKOUT_DIR,
     $RSYNC_DIR,
     [ 'index.html' ],
+    "file://$REPO_DIR/tags/200805291452/htdocs",
     {
         %NOTIFIER_ARGS,
         tag_pattern => qr|tags/\d{12}|,
@@ -98,7 +112,7 @@ run_tests(
 
 
 sub run_tests {
-    my ($scratch_dir, $checkout_dir, $rsync_dir, $files, $args) = @_;
+    my ($scratch_dir, $checkout_dir, $rsync_dir, $files, $repos_uri, $args) = @_;
 
     my $cwd = Cwd::getcwd();
 
@@ -111,9 +125,16 @@ sub run_tests {
 
     ok($notifier->prepare, 'prepared AutoCheckout');
 
-    # Close and the reopen STDOUT to avoid confusion in Test::Harness with the svn output
+    # Close STDOUT avoid confusion in Test::Harness with the svn output
     close STDOUT or die "Could not close STDOUT: $!";
+
+    my $test_logger = Test::Log4perl->get_logger($notifier->log_category);
+    Test::Log4perl->start(ignore_priority => 'debug');
+    $test_logger->info("Mirroring $repos_uri, revision $args->{revision}");
     $notifier->execute;
+    Test::Log4perl->end("handler logged some basic information");
+
+    # Reopen STDOUT to restore standard expectations
     open STDOUT, '>-' or die "Could not reopen STDOUT: $!";
 
     ok(-d $checkout_dir, 'checkout directory exists');
